2007-10-09  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Lexer.cs: Fixed "Bug 331772 - Unable to handle
	  conditional class definition".

2007-10-09  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Lexer.cs: C# lexer can now handle #if ... #else
	  ... #endif pre processing directives.
	
	  (Needed to fix bug 331772 - Unable to handle conditional class
	  definition)

2007-09-15  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Parser/CSharp/cs.ATG, Project/Src/Parser/CSharp/Parser.cs:
	  Fixed 82841: Enum members appear twice in autocomplete.

2007-09-13  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Ast/General/CompilationUnit.cs: Compilation unit ToString
	  works.

2007-09-12  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Parser/CSharp/cs.ATG: Corrected some expression positions.

2007-09-11  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Parser/CSharp/cs.ATG: Corrected enum field end location. 

2007-09-07  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Parser/CSharp/cs.ATG, Project/Src/Parser/CSharp/Parser.cs:
	  Worked on bug 82720: Null ref when autocomplete activated

2007-09-06  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Parser/CSharp/cs.ATG, Project/Src/Parser/gen.sh: Applied some
	  patches to the new NRefartory from the former monodevelop nrefactory
	  version.
	
	  Added a parser generation script for linux which can be used to generate
	  the parser out of the ATG files. The Parser.cs files should never be
	  patched directly.

2007-09-04  Michael Hutchinson <MHutchinson@novell.com> 

	* Project/Src/Visitors/CodeDOMOutputVisitor.cs: Respect "partial" modifier
	  when building CodeDOM types.

2007-08-23  Mike Krüger <mkrueger@novell.com> 

	* NRefactory.mdp: Updated to the latest .NET 2.0 version.

2007-08-22  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Lexer.cs: Fixed 82529:TaskList doesn't update
	  when using comments: /**/.
